@@ -23,11 +23,15 @@ public class RunConfigFooterController {
     @Setter(onMethod_ = @Autowired)
     private RunConfigSettingHeaderController runConfigSettingHeaderController;
 
-    @FXML private AnchorPane configFooter;
-    @FXML private HBox content;
+    @FXML
+    private AnchorPane configFooter;
+    @FXML
+    private HBox content;
 
-    @FXML private Label cancelButton;
-    @FXML private Label submitButton;
+    @FXML
+    private Label cancelButton;
+    @FXML
+    private Label submitButton;
 
     @Setter
     private Runnable saveRunnable;
@@ -41,13 +45,15 @@ public class RunConfigFooterController {
 
     public void help() {
         String url = properties.getGuidesUrl() + "configs.md";
-        Thread.ofVirtual().start(() -> {
+        new Thread(() -> {
             try {
                 if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE)) {
                     Desktop.getDesktop().browse(new URI(url));
                 }
-            } catch (IOException | URISyntaxException _) {}
-        });
+            } catch (IOException | URISyntaxException _) {
+                // Ignore
+            }
+        }).start();
     }
 
     @FXML
